scripts/nullaway/annotator/url70997c83aa_Xilaew_risiko_tgz-pJ8-risiko_XMI2XMLtransformerJ8.txt
../annotator/url70997c83aa_Xilaew_risiko_tgz-pJ8-risiko_XMI2XMLtransformerJ8/src/risiko/GameMonitor.java:138: warning: [dep-ann] deprecated item is not annotated with @Deprecated
	public int addActions(InputStream in) throws IOException {
	           ^
../annotator/url70997c83aa_Xilaew_risiko_tgz-pJ8-risiko_XMI2XMLtransformerJ8/src/risiko/GameMonitor.java:173: warning: [dep-ann] deprecated item is not annotated with @Deprecated
	public void setBoard(InputStream in) throws IOException {
	            ^
../annotator/url70997c83aa_Xilaew_risiko_tgz-pJ8-risiko_XMI2XMLtransformerJ8/src/risiko/GameMonitor.java:197: warning: [dep-ann] deprecated item is not annotated with @Deprecated
	public void setState(InputStream in) throws IOException {
	            ^
../annotator/url70997c83aa_Xilaew_risiko_tgz-pJ8-risiko_XMI2XMLtransformerJ8/src/risiko/ExecutorTest.java:75: error: [NullAway] dereferenced expression result.getTurn() is @Nullable
			List<CountryState> countries = result.getTurn().getOwnedCountries();
			                                               ^
    (see http://t.uber.com/nullaway )
../annotator/url70997c83aa_Xilaew_risiko_tgz-pJ8-risiko_XMI2XMLtransformerJ8/src/risiko/Engine.java:139: error: [NullAway] passing @Nullable parameter 'this.board' where @NonNull is required
				this.executor = ExecutorFactory.getExecutor(this.board,
				                                                ^
    (see http://t.uber.com/nullaway )
../annotator/url70997c83aa_Xilaew_risiko_tgz-pJ8-risiko_XMI2XMLtransformerJ8/src/risiko/ActionExecutor.java:63: error: [NullAway] dereferenced expression arg.getPlayer() is @Nullable
		if (arg.getPlayer().equals(state.getTurn())
		                   ^
    (see http://t.uber.com/nullaway )
../annotator/url70997c83aa_Xilaew_risiko_tgz-pJ8-risiko_XMI2XMLtransformerJ8/src/risiko/main/Client.java:85: error: [NullAway] dereferenced expression s is @Nullable
		s.configureBlocking(true);
		 ^
    (see http://t.uber.com/nullaway )
../annotator/url70997c83aa_Xilaew_risiko_tgz-pJ8-risiko_XMI2XMLtransformerJ8/src/risiko/GameMonitor.java:150: error: [NullAway] dereferenced expression actions is @Nullable
		actions.add(action);
		       ^
    (see http://t.uber.com/nullaway )
../annotator/url70997c83aa_Xilaew_risiko_tgz-pJ8-risiko_XMI2XMLtransformerJ8/src/risiko/gamestate/impl/statePackageImpl.java:46: error: [NullAway] assigning @Nullable expression to @NonNull field
	private EClass playerEClass = null;
	               ^
    (see http://t.uber.com/nullaway )
../annotator/url70997c83aa_Xilaew_risiko_tgz-pJ8-risiko_XMI2XMLtransformerJ8/src/risiko/gamestate/impl/statePackageImpl.java:53: error: [NullAway] assigning @Nullable expression to @NonNull field
	private EClass stateEClass = null;
	               ^
    (see http://t.uber.com/nullaway )
../annotator/url70997c83aa_Xilaew_risiko_tgz-pJ8-risiko_XMI2XMLtransformerJ8/src/risiko/gamestate/impl/statePackageImpl.java:60: error: [NullAway] assigning @Nullable expression to @NonNull field
	private EClass countryStateEClass = null;
	               ^
    (see http://t.uber.com/nullaway )
../annotator/url70997c83aa_Xilaew_risiko_tgz-pJ8-risiko_XMI2XMLtransformerJ8/src/risiko/gamestate/impl/statePackageImpl.java:67: error: [NullAway] assigning @Nullable expression to @NonNull field
	private EClass countryToCountryStateMapEClass = null;
	               ^
    (see http://t.uber.com/nullaway )
../annotator/url70997c83aa_Xilaew_risiko_tgz-pJ8-risiko_XMI2XMLtransformerJ8/src/risiko/actions/impl/actionPackageImpl.java:46: error: [NullAway] assigning @Nullable expression to @NonNull field
	private EClass atackEClass = null;
	               ^
    (see http://t.uber.com/nullaway )
../annotator/url70997c83aa_Xilaew_risiko_tgz-pJ8-risiko_XMI2XMLtransformerJ8/src/risiko/actions/impl/actionPackageImpl.java:53: error: [NullAway] assigning @Nullable expression to @NonNull field
	private EClass setTroopsEClass = null;
	               ^
    (see http://t.uber.com/nullaway )
../annotator/url70997c83aa_Xilaew_risiko_tgz-pJ8-risiko_XMI2XMLtransformerJ8/src/risiko/actions/impl/actionPackageImpl.java:60: error: [NullAway] assigning @Nullable expression to @NonNull field
	private EClass coinCardsEClass = null;
	               ^
    (see http://t.uber.com/nullaway )
../annotator/url70997c83aa_Xilaew_risiko_tgz-pJ8-risiko_XMI2XMLtransformerJ8/src/risiko/actions/impl/actionPackageImpl.java:67: error: [NullAway] assigning @Nullable expression to @NonNull field
	private EClass inGameActionEClass = null;
	               ^
    (see http://t.uber.com/nullaway )
../annotator/url70997c83aa_Xilaew_risiko_tgz-pJ8-risiko_XMI2XMLtransformerJ8/src/risiko/actions/impl/actionPackageImpl.java:81: error: [NullAway] assigning @Nullable expression to @NonNull field
	private EClass removePlayerEClass = null;
	               ^
    (see http://t.uber.com/nullaway )
../annotator/url70997c83aa_Xilaew_risiko_tgz-pJ8-risiko_XMI2XMLtransformerJ8/src/risiko/actions/impl/actionPackageImpl.java:95: error: [NullAway] assigning @Nullable expression to @NonNull field
	private EClass moveTroopsEClass = null;
	               ^
    (see http://t.uber.com/nullaway )
../annotator/url70997c83aa_Xilaew_risiko_tgz-pJ8-risiko_XMI2XMLtransformerJ8/src/risiko/actions/impl/actionPackageImpl.java:102: error: [NullAway] assigning @Nullable expression to @NonNull field
	private EClass addPlayerEClass = null;
	               ^
    (see http://t.uber.com/nullaway )
../annotator/url70997c83aa_Xilaew_risiko_tgz-pJ8-risiko_XMI2XMLtransformerJ8/src/risiko/actions/impl/actionPackageImpl.java:477: error: [NullAway] dereferenced expression startGameEClass is @Nullable
		startGameEClass.getESuperTypes().add(this.getAction());
		               ^
    (see http://t.uber.com/nullaway )
../annotator/url70997c83aa_Xilaew_risiko_tgz-pJ8-risiko_XMI2XMLtransformerJ8/src/risiko/actions/impl/actionPackageImpl.java:479: error: [NullAway] dereferenced expression drawCardEClass is @Nullable
		drawCardEClass.getESuperTypes().add(this.getInGameAction());
		              ^
    (see http://t.uber.com/nullaway )
../annotator/url70997c83aa_Xilaew_risiko_tgz-pJ8-risiko_XMI2XMLtransformerJ8/src/risiko/board/impl/boardPackageImpl.java:44: error: [NullAway] assigning @Nullable expression to @NonNull field
	private EClass boardEClass = null;
	               ^
    (see http://t.uber.com/nullaway )
../annotator/url70997c83aa_Xilaew_risiko_tgz-pJ8-risiko_XMI2XMLtransformerJ8/src/risiko/board/impl/boardPackageImpl.java:51: error: [NullAway] assigning @Nullable expression to @NonNull field
	private EClass countryEClass = null;
	               ^
    (see http://t.uber.com/nullaway )
../annotator/url70997c83aa_Xilaew_risiko_tgz-pJ8-risiko_XMI2XMLtransformerJ8/src/risiko/board/impl/boardPackageImpl.java:58: error: [NullAway] assigning @Nullable expression to @NonNull field
	private EClass borderEClass = null;
	               ^
    (see http://t.uber.com/nullaway )
../annotator/url70997c83aa_Xilaew_risiko_tgz-pJ8-risiko_XMI2XMLtransformerJ8/src/risiko/board/impl/boardPackageImpl.java:65: error: [NullAway] assigning @Nullable expression to @NonNull field
	private EClass continentEClass = null;
	               ^
    (see http://t.uber.com/nullaway )
../annotator/url70997c83aa_Xilaew_risiko_tgz-pJ8-risiko_XMI2XMLtransformerJ8/src/risiko/board/impl/boardPackageImpl.java:72: error: [NullAway] assigning @Nullable expression to @NonNull field
	private EClass cardEClass = null;
	               ^
    (see http://t.uber.com/nullaway )
../annotator/url70997c83aa_Xilaew_risiko_tgz-pJ8-risiko_XMI2XMLtransformerJ8/src/risiko/tcp/ClientConnectorTest.java:19: error: [NullAway] @NonNull field con not initialized
	ClientConnector con;
	                ^
    (see http://t.uber.com/nullaway )
24 errors
3 warnings
